objects/CPP_Supplier_Info__c.object
<CustomObject>
    <fields>
        <fullName>Annual_LBS_by_Supplier__c</fullName>
        <label>Annual LBS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP__c</fullName>
        <description>CPP that this supplier info is for.</description>
        <label>CPP</label>
        <referenceTo>CPP__c</referenceTo>
        <relationshipLabel>CPP Suppliers Info</relationshipLabel>
        <relationshipName>CPP_Suppliers_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_sales_Value__c</fullName>
        <formula>Annual_LBS_by_Supplier__c  *  per_UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. sales Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exp_Date__c</fullName>
        <inlineHelpText>Contract expiration date.</inlineHelpText>
        <label>Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Source__c</fullName>
        <label>Price Source</label>
        <picklist>
            <picklistValues>
                <fullName>Written - Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written - Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP Producer Info</relationshipLabel>
        <relationshipName>CPP_Producers_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP Suppliers Info</relationshipLabel>
        <relationshipName>CPP_Suppliers_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>$UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Vol__c</fullName>
        <formula>(CPP__r.AnnualUsageInPounds__c  / Annual_LBS_by_Supplier__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Vol.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_UOM__c</fullName>
        <label>$ per UOM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
</CustomObject>